# mobile_app_open

./: .tf_configure.bazelrc  AGENTS.md
tools/protoc/: download.sh
tools/stubs/local_config_cuda/: BUILD.bazel  WORKSPACE
tools/stubs/local_config_cuda/cuda/: BUILD.bazel  build_defs.bzl
tools/stubs/local_config_rocm/: BUILD.bazel  WORKSPACE
tools/stubs/local_config_rocm/rocm/: BUILD.bazel  build_defs.bzl
tools/stubs/python_version_repo/: BUILD.bazel  WORKSPACE
tools/stubs/tf_wheel_version_suffix/: BUILD.bazel  WORKSPACE  wheel_version_suffix.bzl
